--- a/about.html
+++ b/about.html
@@ -1,7 +1,8 @@
 ---
 layout: page
 title: "About"
-description: "바꿀 수 없는 것을 받아들일 수 있는 평온과 바꿀 수 있는 것을 바꾸는 용기와 이 둘을 분별할 줄 아는 지혜를 주소서"
+description: "바꿀 수 없는 것을 받아들일 수 있는 평온과 바꿀 수 있는 것을 바꾸는 용기와
+ 이 둘을 분별할 줄 아는 지혜를 주소서"
 header-img: "img/dino.jpg"
 multilingual: true
 ---
